// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NuVsItem /> should render when active 1`] = `
<Item__StyledNuVsItem
  onClick={[Function]}
  selected={true}
>
  <Item__NuVsItemHeader>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </Item__NuVsItemHeader>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Item__StyledNuVsItem>
`;

exports[`<NuVsItem /> should render when not active 1`] = `
<Item__StyledNuVsItem
  onClick={[Function]}
  selected={false}
>
  <Item__NuVsItemHeader>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </Item__NuVsItemHeader>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Item__StyledNuVsItem>
`;

exports[`<NuVsItem /> should render when not active 2`] = `
<Item__StyledNuVsItem
  onClick={[Function]}
  selected={false}
>
  <Item__NuVsItemHeader>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </Item__NuVsItemHeader>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Item__StyledNuVsItem>
`;
